[package]
name = "lsm-tree"
version = "0.1.0"
authors = ["longfangsong <longfangsong@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.110"
bincode = "1.2.1"
failure = "0.1.8"

[dev-dependencies]
tempfile = "3.1.0"
